[project]
name = "abtest-summary"
version = "0.1.0"
description = ""
authors = [
    {name = "Ludovico Coveri",email = "105851039+ludovicolc@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gspread (>=6.2.1,<7.0.0)",
    "google-api-python-client (>=2.179.0,<3.0.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
